@@ -331,6 +331,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * BREAKING CHANGE: action=purge requires write rights and, for anonymous users,
   a POST request
 * (bug 15935) Added action=userrights to add/remove users to/from groups
+* (bug 18099) Using appendtext to edit a non-existent page causes an interface
+  message to be included in the page text
 
 === Languages updated in 1.15 ===
 
